[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.0"
description = ""
authors = ["Centaurioun <86323645+Centaurioun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
